// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extractSelectExpressionsFromQuerySql should be able to determine types accurately for this example 1`] = `
Array [
  TypeDefinitionOfQueryInputVariable {
    "name": "id",
    "typeReference": TypeDefinitionReference {
      "functionReferencePath": null,
      "tableReferencePath": "i.id",
    },
  },
]
`;

exports[`extractSelectExpressionsFromQuerySql should be able to determine types accurately for this other example 1`] = `Array []`;

exports[`extractSelectExpressionsFromQuerySql should be able to determine types accurately for this other other example 1`] = `
Array [
  TypeDefinitionOfQueryInputVariable {
    "name": "suggestionSource",
    "typeReference": TypeDefinitionReference {
      "functionReferencePath": "upsert_suggestion.input.0",
      "tableReferencePath": null,
    },
  },
  TypeDefinitionOfQueryInputVariable {
    "name": "externalId",
    "typeReference": TypeDefinitionReference {
      "functionReferencePath": "upsert_suggestion.input.1",
      "tableReferencePath": null,
    },
  },
  TypeDefinitionOfQueryInputVariable {
    "name": "suggestedIdeaId",
    "typeReference": TypeDefinitionReference {
      "functionReferencePath": "upsert_suggestion.input.2",
      "tableReferencePath": null,
    },
  },
  TypeDefinitionOfQueryInputVariable {
    "name": "status",
    "typeReference": TypeDefinitionReference {
      "functionReferencePath": "upsert_suggestion.input.3",
      "tableReferencePath": null,
    },
  },
  TypeDefinitionOfQueryInputVariable {
    "name": "result",
    "typeReference": TypeDefinitionReference {
      "functionReferencePath": "upsert_suggestion.input.4",
      "tableReferencePath": null,
    },
  },
]
`;

exports[`extractSelectExpressionsFromQuerySql should be able to determine types accurately for yet another example 1`] = `
Array [
  TypeDefinitionOfQueryInputVariable {
    "name": "name",
    "typeReference": TypeDefinitionReference {
      "functionReferencePath": "get_id_from_suggestion_source_name.input.0",
      "tableReferencePath": null,
    },
  },
]
`;
